-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 6.0.0-rc1
-
None
-
-
92e3eb722a76dd24231facab2ae71d0cc63a7247 (qt-creator/qt-creator/master)
Ctl/Shft/r and Shft/F2 do wrong thing with calls to connect(). There are multiple permutations and combinations of QObject::connect() and they all seem to give different wrong results.
For Gerrit Dashboard: QTCREATORBUG-26638 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
384984,2 | ClangCodeModel: Another clangd cursor adjustment | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |